Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignNumObjUndefined.quorum
class Main
    action Main
        Number v = undefined
        Test(v)
    end

    action Test(Number var)
        if var = undefined
            output "passed"
        end
    end
end
