Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumObjText.quorum
class Main
    action Main
        text v = "text"
        Test(v)
    end

    action Test(Number var)
    end
end
